[package]
name = "colibri"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust bindings for Colibri stateless verifier"
repository = "https://github.com/corpuscore/colibri-stateless"
readme = "README.md"

[lib]
name = "colibri"
path = "src/lib.rs"

[build-dependencies]
cmake = "0.1"

[dependencies]
libc = "0.2"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt", "rt-multi-thread", "time"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
serial_test = "3.0"
anyhow = "1.0"


